--- a/institution/componentes/header/header.html
+++ b/institution/componentes/header/header.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="first_part">
+        <div class="primeira_parte">
             <img src="./IMG/Vector.svg" alt="">
             <h1>NOME DA INSTITUIÇÃO</h1>
         </div>
