--- a/institution/institution_ profile/edit/index.html
+++ b/institution/institution_ profile/edit/index.html
@@ -13,20 +13,20 @@
     <link rel="stylesheet" 
           href=
 "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>editar - perfil da instituição</title>
+    <title>EDIÇÃO DE PERFIL</title>
   </head>
   <body>
     <div class="container mt-5 container">
         <h1>PERFIL DA INSTITUIÇÃO</h1>
         <form class="row g-3">
           <div class="col-md-12" id="icon">
-            <label for="institutional_email" class="form-label">E-mail institucional</label>
-            <input type="email" class="form-control institutional_email" placeholder="unicuritiba@gmail.com" required> 
+            <label for="email_institucional" class="form-label">E-mail institucional</label>
+            <input type="email" class="form-control email_institucional" placeholder="unicuritiba@gmail.com" required> 
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
-            <label for="institution_name" class="form-label">Nome da instituição</label>
-            <input type="text" class="form-control institution_name" placeholder="Universidade De Curitiba " required>
+            <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
+            <input type="text" class="form-control nome_da_instituicao" placeholder="Universidade De Curitiba " required>
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
@@ -35,20 +35,20 @@
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
-            <label for="phone" class="form-label">Telefone</label>
-            <input type="text" class="form-control phone" placeholder="+55 (11) 99869-7564" required>
+            <label for="telefone" class="form-label">Telefone</label>
+            <input type="text" class="form-control telefone" placeholder="+55 (11) 99869-7564" required>
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-6" id="icon">
-            <label for="password" class="form-label">Senha</label>
-            <input type="password" class="form-control password" placeholder="Nexus@5" required>
+            <label for="senha" class="form-label">Senha</label>
+            <input type="senha" class="form-control senha" placeholder="Nexus@5" required>
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
           <div class="col-md-3">
-            <button id="first-button" type="submit">CANCELAR</button>
+            <button id="primeiro_botao" type="submit">CANCELAR</button>
           </div>
           <div class="col-md-3">
-            <button id="second-button" type="">SALVAR</button>
+            <button id="segundo_botao" type="">SALVAR</button>
           </div>
         </form>
     </div>
