--- a/institution/institution_ profile/perfil/index.html
+++ b/institution/institution_ profile/perfil/index.html
@@ -18,13 +18,13 @@
         <form class="row g-3">
 
           <div class="col-md-12" >
-            <label for="institutional_email" class="form-label">E-mail institucional</label>
-            <input type="email" class="form-control institutional_email" placeholder="unicuritiba@gmail.com" required>
+            <label for="email_institucional" class="form-label">E-mail institucional</label>
+            <input type="email" class="form-control email_institucional" placeholder="unicuritiba@gmail.com" required>
           </div>
 
           <div class="col-md-6">
-            <label for="institution_name" class="form-label">Nome da instituição</label>
-            <input type="text" class="form-control institution_name" placeholder="Universidade De Curitiba " required>
+            <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
+            <input type="text" class="form-control nome_da_instituicao" placeholder="Universidade De Curitiba " required>
           </div>
 
           <div class="col-md-6 for-cnp">
@@ -33,25 +33,25 @@
           </div>
 
           <div class="col-md-6">
-            <label for="phone" class="form-label">Telefone</label>
-            <input type="text" class="form-control phone" placeholder="+55 (11) 99869-7564" required>
+            <label for="telefone" class="form-label">Telefone</label>
+            <input type="text" class="form-control telefone" placeholder="+55 (11) 99869-7564" required>
           </div>
 
           <div class="col-md-6">
-            <label for="password" class="form-label">Senha</label>
-            <input type="password" class="form-control password" placeholder="Nexus@5" required>
+            <label for="senha" class="form-label">Senha</label>
+            <input type="senha" class="form-control senha" placeholder="Nexus@5" required>
           </div>
 
           <div class="col-md-6">
-            <button id="first-button" type="submit">INFORMAÇÕES DE PAGAMENTO</button>
+            <button id="primeiro_botao" type="submit">INFORMAÇÕES DE PAGAMENTO</button>
           </div>
 
           <div class="col-md-3">
-            <button id="second-button" type="submit">EXCLUIR</button>
+            <button id="segundo_botao" type="submit">EXCLUIR</button>
           </div>
           
           <div class="col-md-3">
-            <button id="third-button" type="">EDITAR</button>
+            <button id="terceiro_botao" type="">EDITAR</button>
           </div>
         </form>
     </div>
