--- a/landing_page/home/index.html
+++ b/landing_page/home/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
    
     <title>Landing Page</title>
 </head>
@@ -18,7 +18,7 @@
         <div class="container">
             <h1>LOREM IMPSUM DOLOR SIT AMET</h1>
             <h2>Lorem ipsum dolor sit amet. Eos veniam rerum aut dolorem.</h2>
-            <div class="button"> <p>SAIBA MAIS</p> </div>
+            <div class="botao"> <p>SAIBA MAIS</p> </div>
         </div>
     </main>
     <footer></footer>
