--- a/institution/institution_ profile/payment_information/index.html
+++ b/institution/institution_ profile/payment_information/index.html
@@ -10,35 +10,35 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
-    <title>informacoes de pagamento da instituição</title>
+    <title>INFORMAÇÕES DE PAGAMENTO</title>
   </head>
   <body>
     <div class="container mt-5 container">
-        <h1>PERFIL DA INSTITUIÇÃO</h1>
+        <h1>INFORMAÇÕES DE PAGAMENTO</h1>
         <form class="row g-3">
 
           <div class="col-md-12" >
-            <label for="card_number" class="form-label">Número do cartão</label>
-            <input type="text" class="form-control card_number" placeholder="unicuritiba@gmail.com" required>
+            <label for="numero_do_cartao" class="form-label">Número do cartão</label>
+            <input type="text" class="form-control numero_do_cartao" placeholder="unicuritiba@gmail.com" required>
           </div>
 
           <div class="col-md-12">
-            <label for="name_on_the_card" class="form-label">Nome no cartão</label>
-            <input type="text" class="form-control name_on_the_card" placeholder="Universidade De Curitiba " required>
+            <label for="nome_no_cartao" class="form-label">Nome no cartão</label>
+            <input type="text" class="form-control nome_no_cartao" placeholder="Universidade De Curitiba " required>
           </div>
 
           <div class="col-md-6 for-cnp">
-            <label for="valid_thru" class="form-label">Validade</label>
-            <input type="text" class="form-control valid_thru" placeholder="42.591.538/0001-68" required>
+            <label for="validade" class="form-label">Validade</label>
+            <input type="text" class="form-control validade" placeholder="42.591.538/0001-68" required>
           </div>
 
           <div class="col-md-6">
-            <label for="cvc" class="form-label">CVV</label>
-            <input type="text" class="form-control cvc" placeholder="+55 (11) 99869-7564" required>
+            <label for="cvv" class="form-label">CVV</label>
+            <input type="text" class="form-control cvv" placeholder="+55 (11) 99869-7564" required>
           </div>
           
           <div class="col-md-3">
-            <button id="third-button" type="">EDITAR</button>
+            <button id="primeiro_botao" type="submit">EDITAR</button>
           </div>
         </form>
     </div>
