--- a/instituicao/perfil_da_instituicao/infos_de_pagamento/vizualizacao/index.html
+++ b/instituicao/perfil_da_instituicao/infos_de_pagamento/vizualizacao/index.html
@@ -19,22 +19,22 @@
 
           <div class="col-md-12" >
             <label for="numero_do_cartao" class="form-label">Número do cartão</label>
-            <input type="text" class="form-control numero_do_cartao" placeholder="unicuritiba@gmail.com" required>
+            <input type="text" class="form-control numero_do_cartao" required>
           </div>
 
           <div class="col-md-12">
             <label for="nome_no_cartao" class="form-label">Nome no cartão</label>
-            <input type="text" class="form-control nome_no_cartao" placeholder="Universidade De Curitiba " required>
+            <input type="text" class="form-control nome_no_cartao" required>
           </div>
 
           <div class="col-md-6 for-cnp">
             <label for="validade" class="form-label">Validade</label>
-            <input type="text" class="form-control validade" placeholder="42.591.538/0001-68" required>
+            <input type="text" class="form-control validade" required>
           </div>
 
           <div class="col-md-6">
             <label for="cvv" class="form-label">CVV</label>
-            <input type="text" class="form-control cvv" placeholder="+55 (11) 99869-7564" required>
+            <input type="text" class="form-control cvv" required>
           </div>
           
           <div class="col-md-3">
