--- a/instituicao/perfil_da_instituicao/vizualizacao/index.html
+++ b/instituicao/perfil_da_instituicao/vizualizacao/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
-    <title>perfil da instituição</title>
+    <title>PERFIL DA INSTITUIÇÃO</title>
   </head>
   <body>
     <div class="container mt-5 container">
