arrumando links das páginas de login e pagamento

--- a/home/compra/index.html
+++ b/home/compra/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="#">
-            <img src="../images/logo-branca.svg" alt="logo" />
+            <img src="../images-global/logo-branca.svg" alt="logo" />
         </a>
         <nav>
             <ul class="nav_links">
@@ -27,7 +27,7 @@
         </nav>
         <nav class="login_adquirir">
             <a href="../login/index.html" class="login_link">Login</a>
-            <a href="#">
+            <a href="../compra/index.html">
                 <button>ADQUIRIR →</button>
             </a>
         </nav>
@@ -75,7 +75,7 @@
     </main>
     <footer>
         <a href="#">
-            <img src="../images/logo-branca.svg" alt="logo">
+            <img src="../images-global/logo-branca.svg" alt="logo">
         </a>
         <h4>© 2022 Nexus Insights. Todos os direitos reservados.</h4>
         <div class="social_medias">
