--- a/home/login/index.html
+++ b/home/login/index.html
@@ -21,7 +21,7 @@
     <body>
         <header>
             <a href="#">
-                <img src="../images/logo-branca.svg" alt="logo" />
+                <img src="../images-global/logo-branca.svg" alt="logo" />
             </a>
             <nav>
                 <ul class="nav_links">
@@ -33,7 +33,7 @@
             </nav>
             <nav class="login_adquirir">
                 <a href="index.html" class="login_link">Login</a>
-                <a href="#">
+                <a href="../compra/index.html">
                     <button>ADQUIRIR →</button>
                 </a>
             </nav>
@@ -63,7 +63,7 @@
 
         <footer>
             <a href="#">
-                <img src="../images/logo-branca.svg" alt="logo" />
+                <img src="../images-global/logo-branca.svg" alt="logo" />
             </a>
             <h4>© 2022 Nexus Insights. Todos os direitos reservados.</h4>
             <div class="social_medias">
