página de plano feita

--- a/home/compra/index.html
+++ b/home/compra/index.html
@@ -43,25 +43,39 @@
         </div>
         <div class="form_plano">
             <div class="preco_plano">
-                <img src="" alt="">
-                <p class="titulo">Mensal</p>
-                <p class="valor"></p>
+                <img src="./img/plano_compra.svg" alt="plano">
+                <div class="valor_plano">
+                    <p class="titulo">Mensal</p>
+                    <div class="recorrencia_pagamento">
+                        <p class="valor">R$12</p>
+                        <p class="recorrencia">/mês</p>
+                    </div>
+                </div>
             </div>
             <div class="infos_plano">
                 <ul>
-                    <li>Lorem
+                    <li>
+                        <p class="texto">Gerenciamento de professores e alunos</p> 
                         <img class="check_img" src="./img/check_icon.svg" alt="check">
                     </li>
-                    <li>Lorem
+                    <li>
+                        <p class="texto">Melhor organização das atividades em grupo</p>
                         <img class="check_img" src="./img/check_icon.svg" alt="check">
                     </li>
-                    <li>Lorem
+                    <li>
+                        <p class="texto">Pasta de arquivos compartilhada entre alunos e professores</p> 
                         <img class="check_img" src="./img/check_icon.svg" alt="check">
                     </li>
-                    <li>Lorem
+                    <li>
+                        <p class="texto">Possibilidade de realizar postagens dentro do grupo</p> 
                         <img class="check_img" src="./img/check_icon.svg" alt="check">
                     </li>
-                    <li>Lorem
+                    <li>
+                        <p class="texto">Atribuição de tarefas e prazos</p>
+                        <img class="check_img" src="./img/check_icon.svg" alt="check">
+                    </li>
+                    <li>
+                        <p class="texto">Atribuição de tarefas e prazos</p>
                         <img class="check_img" src="./img/check_icon.svg" alt="check">
                     </li>
                 </ul>
