tela de pagamento iniciada

--- a/home/componentes/footer/index.html
+++ b/home/componentes/footer/index.html
@@ -10,7 +10,7 @@
 <body>
     <footer>
         <a href="#">
-          <img src="img/logo-branca.svg" alt="logo">
+          <img src="../../images-global/logo-branca.svg" alt="logo">
         </a>
         <h4>© 2022 Nexus Insights. Todos os direitos reservados.</h4>
         <div class="social_medias">
