--- a/home/compra/index.html
+++ b/home/compra/index.html
@@ -81,7 +81,9 @@
                 </ul>
             </div>
             <form method="get">
-                <input type="submit" value="ADQUIRIR" />
+                <a href="./pagamento/index.html">
+                <input type="button" value="ADQUIRIR" />
+                </a>
             </form>
         </div>
 
