--- a/home/componentes/header/index.html
+++ b/home/componentes/header/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <a href="#">
-                <img src="img/logo-branca.svg" alt="logo" />
+                <img src="../../images-global/logo-branca.svg" alt="logo" />
             </a>
             <nav>
                 <ul class="nav_links">
