--- a/home/compra/pagamento/index.html
+++ b/home/compra/pagamento/index.html
@@ -1,13 +1,157 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../">
-    <title>Planos</title>
-</head>
-<body>
-    <main></main>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="../../componentes/header/styles_header.css"
+        />
+        <link
+            rel="stylesheet"
+            href="../../componentes/footer/styles_footer.css"
+        />
+        <link rel="stylesheet" href="pagamento.css" />
+        <title>Pagamento</title>
+    </head>
+    <body>
+        <header>
+            <a href="../../index.html">
+                <img src="../../images-global/logo-branca.svg" alt="logo" />
+            </a>
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Produto</a></li>
+                    <li><a href="index.html">Planos & Preços</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+            <nav class="login_adquirir">
+                <a href="../login/index.html" class="login_link">Login</a>
+                <a href="../compra/index.html">
+                    <button>ADQUIRIR →</button>
+                </a>
+            </nav>
+        </header>
+
+        <main>
+            <h4>Seu pedido</h4>
+            <div class="infos_pagamento">
+                <div class="primeira_linha">
+                    <div class="container_pagamento">
+                        <img src="img/logo_basico.svg" alt="logo" />
+                        <p>Nexus TCC</p>
+                        <select name="tipos_plano" id="tipos_plano">
+                            <option value="Mensal">Mensal</option>
+                            <option value="Anual">Anual</option>
+                        </select>
+                    </div>
+                    <p>R$ 12,00</p>
+                </div>
+                <div class="segunda_linha">
+                    <p>Total</p>
+                    <p>R$ 12,00</p>
+                </div>
+            </div>
+
+            <div class="form_pagamento">
+                <h4>Informações do cliente e pagamento</h4>
+                <form action="" method="post">
+                    <div class="infos_instituicao">
+                        <label>Nome da Instituição</label>
+                        <input type="text" placeholder="Nome da Instituição" />
+                        <label>E-mail Institucional</label>
+                        <input type="text" placeholder="E-mail Institucional" />
+                        <label>Confirme seu E-mail</label>
+                        <input type="text" placeholder="Confirme seu E-mail" />
+                        <label>Senha</label>
+                        <input type="text" placeholder="Senha" />
+                        <label>Confirme sua senha</label>
+                        <input type="text" placeholder="Confirme sua senha" />
+                        <label>Telefone</label>
+                        <input type="text" placeholder="Telefone" />
+                        <label>CNPJ</label>
+                        <input type="text" placeholder="CNPJ" />
+                    </div>
+                    <div class="cartao_instituicao">
+                        <input type="text" placeholder="Número do cartão" />
+                        <input type="text" placeholder="Nome no cartão" />
+                        <input
+                            type="text"
+                            placeholder="Data de validade (mm/aaaa)"
+                        />
+                        <input type="text" placeholder="Código de segurança" />
+                        <img src="" alt="cartao" />
+                    </div>
+                    <input type="submit" value="FINALIZAR PEDIDO →" />
+                </form>
+            </div>
+        </main>
+
+        <footer>
+            <a href="../../index.html">
+                <img src="../../images-global/logo-branca.svg" alt="logo" />
+            </a>
+            <h4>© 2022 Nexus Insights. Todos os direitos reservados.</h4>
+            <div class="social_medias">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <svg
+                                width="7"
+                                height="16"
+                                viewBox="0 0 7 16"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    id="facebook_icon"
+                                    d="M6.43484 8.35726H4.41523C4.41523 11.6612 4.41523 15.728 4.41523 15.728H1.42258C1.42258 15.728 1.42258 11.7006 1.42258 8.35726H0V5.7522H1.42258V4.06721C1.42258 2.86043 1.98261 0.974731 4.44274 0.974731L6.66035 0.983435V3.5122C6.66035 3.5122 5.31278 3.5122 5.05077 3.5122C4.78875 3.5122 4.41623 3.64635 4.41623 4.22183V5.75271H6.69636L6.43484 8.35726Z"
+                                    fill="#E3E3E3"
+                                />
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg
+                                width="16"
+                                height="13"
+                                viewBox="0 0 16 13"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    id="twitter_icon"
+                                    d="M13.574 3.11239L13.5833 3.51989C13.5833 7.68107 10.4917 12.4751 4.83752 12.4751C3.10211 12.4751 1.48683 11.9542 0.125977 11.0609C0.366338 11.0896 0.611321 11.1056 0.859486 11.1056C2.29996 11.1056 3.62493 10.6022 4.67678 9.75846C3.33154 9.73291 2.19693 8.82203 1.80522 7.57242C1.99404 7.60916 2.18445 7.62677 2.38421 7.62677C2.66513 7.62677 2.93665 7.59003 3.19416 7.51811C1.78803 7.22726 0.72837 5.95688 0.72837 4.43239V4.39244C1.14348 4.62894 1.61635 4.76956 2.12044 4.78717C1.29642 4.22307 0.75332 3.25947 0.75332 2.16803C0.75332 1.59116 0.904714 1.05104 1.16843 0.586033C2.68381 2.49084 4.94985 3.74366 7.5046 3.87471C7.45152 3.64458 7.42503 3.40329 7.42503 3.15723C7.42503 1.42021 8.80149 0.0107422 10.4995 0.0107422C11.3828 0.0107422 12.1819 0.39264 12.7436 1.00467C13.4428 0.862429 14.1014 0.600383 14.696 0.240827C14.4666 0.97592 13.9797 1.59274 13.3445 1.98263C13.9641 1.90751 14.5587 1.73651 15.1096 1.48724C14.6976 2.11683 14.1748 2.67136 13.574 3.11239Z"
+                                    fill="#E3E3E3"
+                                />
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg
+                                width="16"
+                                height="16"
+                                viewBox="0 0 16 16"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    id="instagram_icon"
+                                    fill-rule="evenodd"
+                                    clip-rule="evenodd"
+                                    d="M4.96542 0.0478779C5.79879 0.00921126 6.06508 -0.00012207 8.18694 -0.00012207C10.3088 -0.00012207 10.5751 0.00921126 11.4085 0.0478779C12.6781 0.107211 13.7934 0.425878 14.6886 1.34254C15.5838 2.25921 15.895 3.40121 15.953 4.70121C15.9907 5.55454 15.9999 5.82721 15.9999 7.99988C15.9999 10.1725 15.9907 10.4452 15.953 11.2985C15.895 12.5985 15.5838 13.7405 14.6886 14.6572C13.7934 15.5739 12.6781 15.8925 11.4085 15.9519C10.5751 15.9905 10.3088 15.9999 8.18694 15.9999C6.06508 15.9999 5.79879 15.9905 4.96542 15.9519C3.69582 15.8925 2.58052 15.5739 1.68529 14.6572C0.790061 13.7405 0.478847 12.5985 0.420901 11.2985C0.383139 10.4452 0.374023 10.1725 0.374023 7.99988C0.374023 5.82721 0.383139 5.55454 0.420901 4.70121C0.478847 3.40121 0.790061 2.25921 1.68529 1.34254C2.58052 0.425878 3.69582 0.107211 4.96542 0.0478779ZM11.3434 1.48794C10.5198 1.44927 10.2723 1.44127 8.1863 1.44127C6.10025 1.44127 5.85284 1.44927 5.02923 1.48794C4.13986 1.52927 3.31494 1.71194 2.68014 2.36194C2.04534 3.01194 1.86695 3.8566 1.82658 4.76727C1.78882 5.6106 1.78101 5.86394 1.78101 7.99994C1.78101 10.1359 1.78882 10.3893 1.82658 11.2326C1.86695 12.1433 2.04534 12.9879 2.68014 13.6379C3.31494 14.2879 4.13986 14.4706 5.02923 14.5119C5.85284 14.5506 6.10025 14.5586 8.1863 14.5586C10.2723 14.5586 10.5198 14.5506 11.3434 14.5119C12.2327 14.4706 13.0576 14.2879 13.6924 13.6379C14.3272 12.9879 14.5056 12.1433 14.546 11.2326C14.5838 10.3893 14.5916 10.1359 14.5916 7.99994C14.5916 5.86394 14.5838 5.6106 14.546 4.76727C14.5056 3.8566 14.3272 3.01194 13.6924 2.36194C13.0576 1.71194 12.2327 1.52927 11.3434 1.48794ZM4.17358 7.99948C4.17358 5.73081 5.9699 3.89148 8.18551 3.89148C10.4011 3.89148 12.1974 5.73081 12.1974 7.99948C12.1974 10.2681 10.4011 12.1075 8.18551 12.1075C5.9699 12.1075 4.17358 10.2681 4.17358 7.99948ZM5.58057 7.99955C5.58057 9.47222 6.74664 10.6662 8.18487 10.6662C9.62309 10.6662 10.7892 9.47222 10.7892 7.99955C10.7892 6.52688 9.62309 5.33289 8.18487 5.33289C6.74664 5.33289 5.58057 6.52688 5.58057 7.99955ZM13.2943 3.72953C13.2943 4.25973 12.8745 4.68953 12.3567 4.68953C11.8389 4.68953 11.4192 4.25973 11.4192 3.72953C11.4192 3.19934 11.8389 2.76953 12.3567 2.76953C12.8745 2.76953 13.2943 3.19934 13.2943 3.72953Z"
+                                    fill="#E3E3E3"
+                                />
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    </body>
 </html>
