--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -1,59 +1,75 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
-    <title>PERFIL DA INSTITUIÇÃO</title>
-  </head>
-  <body>
-    <div class="container mt-5 container">
-        <h1>PERFIL DA INSTITUIÇÃO</h1>
-        <form class="row g-3">
 
-          <div class="col-md-12" >
-            <label for="email_institucional" class="form-label">E-mail institucional</label>
-            <input type="email" class="form-control email_institucional" placeholder="unicuritiba@gmail.com" required>
-          </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
+  <script src="script.js" defer></script>
+  <title>PERFIL DA INSTITUIÇÃO</title>
+</head>
 
-          <div class="col-md-6">
-            <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
-            <input type="text" class="form-control nome_da_instituicao" placeholder="Universidade De Curitiba " required>
-          </div>
+<body>
+  <div class="container mt-5 container">
+    <h1>PERFIL DA INSTITUIÇÃO</h1>
+    <form class="row g-3">
 
-          <div class="col-md-6 for-cnp">
-            <label for="cnpj" class="form-label">CNPJ</label>
-            <input type="text" class="form-control cnpj" placeholder="42.591.538/0001-68" required>
-          </div>
+      <div class="col-md-12">
+        <label for="email_institucional" class="form-label">E-mail institucional</label>
+        <input type="email" class="form-control email_institucional" placeholder="unicuritiba@gmail.com">
+      </div>
 
-          <div class="col-md-6">
-            <label for="telefone" class="form-label">Telefone</label>
-            <input type="text" class="form-control telefone" placeholder="+55 (11) 99869-7564" required>
-          </div>
+      <div class="col-md-6">
+        <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
+        <input type="text" class="form-control nome_da_instituicao" placeholder="Universidade De Curitiba ">
+      </div>
 
-          <div class="col-md-6">
-            <label for="senha" class="form-label">Senha</label>
-            <input type="senha" class="form-control senha" placeholder="Nexus@5" required>
-          </div>
+      <div class="col-md-6 for-cnp">
+        <label for="cnpj" class="form-label">CNPJ</label>
+        <input type="text" class="form-control cnpj" placeholder="42.591.538/0001-68">
+      </div>
 
-          <div class="col-md-6">
-            <button id="primeiro_botao" type="submit">INFORMAÇÕES DE PAGAMENTO</button>
-          </div>
+      <div class="col-md-6">
+        <label for="telefone" class="form-label">Telefone</label>
+        <input type="text" class="form-control telefone" placeholder="+55 (11) 99869-7564">
+      </div>
 
-          <div class="col-md-3">
-            <button id="segundo_botao" type="submit">EXCLUIR</button>
+      <div class="col-md-6">
+        <label for="senha" class="form-label">Senha</label>
+        <input type="senha" class="form-control senha" placeholder="Nexus@5">
+      </div>
+
+      <div class="col-md-6">
+        <button id="primeiro_botao" type="submit">INFORMAÇÕES DE PAGAMENTO</button>
+      </div>
+
+      <div class="col-md-3">
+        <button id="segundo_botao" type="submit">EDITAR</button>
+      </div>
+
+      <div class="col-md-3">
+        <button id="terceiro_botao" type="">EXCLUIR</button>
+      </div>
+
+      <div class="modal" id="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <h1>DESEJA EXCLUIR A CONTA?</h1>
+            <button>CANCELAR</button>
+            <button>EXCLUIR</button>
           </div>
-          
-          <div class="col-md-3">
-            <button id="terceiro_botao" type="">EDITAR</button>
-          </div>
-        </form>
-    </div>
-  </body>
+        </div>
+
+      </div>
+    </form>
+  </div>
+</body>
+
 </html>
