--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -5,31 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body> <div class="container">
     <div class="card_azul">
         <h1>CRIAR NOVO USUÁRIO COM TURMA PRÉ EXISTENTE</h1>
-        <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: white;" data-width="40" data-height="40"></span>
+        <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: white;" data-width="100vw" data-height="100h"></span>
     </div>
 
-    <div class="col-md-12" >
-        <label for="numero_do_cartao" class="form-label">Número do cartão</label>
-        <input type="text" class="form-control numero_do_cartao" placeholder="unicuritiba@gmail.com" required>
+      <img src="./img/Line.svg" alt="">
+
+
+      <div class="col-md-6 for-cnp turmas_existentes" id="icon">
+        <label for="turmas_ex" class="form-label">TURMAS EXISTENTES</label>
+        <input type="text" class="form-control cnpj">
+        <i class="fa fa-search" style="font-size:24px"></i>
       </div>
 
-      <ul class="list-group">
-        <li class="list-group-item">
-            <div>
-                <p>Turma:</p>
-                <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="40" data-height="40"></span>
-                <p>NOME</p>
+      <ul class="list-group" id="ul">
+        <li id="li" class="list-group-item">
+            <div id="icone">
+                <p class="turma">Turma:</p>
+                <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                <p class="nome">NOME</p>
+            </div>
+
+            <h2>Informacoes sobre a turma</h2>
+        </li>
+
+        <img src="./img/Line.svg" alt="">
+
+        <li id="li" class="list-group-item">
+            <div id="icone">
+                <p class="turma">Turma:</p>
+                <span class="iconify" data-icon="bx:book-reader" style="color: #05204a;" data-width="100" data-height="100"></span>
+                <p class="nome">NOME</p>
             </div>
 
             <h2>Informacoes sobre a turma</h2>
         </li>
       </ul>
+</div>
+    
 </body>
 </html>
