--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -44,12 +44,16 @@
             <input type="senha" class="form-control senha" placeholder="Nexus@5" required>
             <i class="fa fa-edit" style="font-size:24px"></i>
           </div>
-          <div class="col-md-3">
+
+          <div class="buttons">
+            <div class="col-md-3">
             <button id="primeiro_botao" type="submit">CANCELAR</button>
           </div>
           <div class="col-md-3">
             <button id="segundo_botao" type="">SALVAR</button>
           </div>
+          </div>
+          
         </form>
     </div>
   </body>
