--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -13,8 +13,9 @@
 </head>
 <body> <div class="container">
     <div class="card_azul">
+        
         <h1>CRIAR NOVO USUÁRIO COM TURMA PRÉ EXISTENTE</h1>
-        <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: white;" data-width="100vw" data-height="100h"></span>
+        <span class="iconify img" data-icon="carbon:user-avatar-filled-alt" style="color: white;" data-width="vw" data-height="100h"></span>
     </div>
 
       <img src="./img/Line.svg" alt="">
@@ -22,7 +23,7 @@
 
       <div class="col-md-6 for-cnp turmas_existentes" id="icon">
         <label for="turmas_ex" class="form-label">TURMAS EXISTENTES</label>
-        <input type="text" class="form-control cnpj">
+        <input type="text" class="form-control turmas_ex">
         <i class="fa fa-search" style="font-size:24px"></i>
       </div>
 
