--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -37,10 +37,14 @@
             <input type="text" class="form-control cvv" required>
           </div>
           
-          <div class="col-md-3">
+          <div class="buttons">
+             <div class="col-md-3 primeiro_botao">
             <button id="primeiro_botao" type="submit">EDITAR</button>
           </div>
+          </div>
+         
         </form>
+
     </div>
   </body>
 </html>
