fazendo responsividade do formulário de pagamento

--- a/home/compra/index.html
+++ b/home/compra/index.html
@@ -75,7 +75,7 @@
                         <img class="check_img" src="./img/check_icon.svg" alt="check">
                     </li>
                     <li>
-                        <p class="texto">Atribuição de tarefas e prazos</p>
+                        <p class="texto">Envio das avaliações feitas pela banca ao grupo</p>
                         <img class="check_img" src="./img/check_icon.svg" alt="check">
                     </li>
                 </ul>
