--- a/instituicao/usuarios/cadastro/selecao/index.html
+++ b/instituicao/usuarios/cadastro/selecao/index.html
@@ -13,10 +13,14 @@
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
+    
+    <div class="bg"></div>
+
     <div class="container">
         <div class="card_azul">
             <h1>CRIAR NOVO USUÁRIO COM TURMA PRÉ EXISTENTE</h1>
@@ -25,7 +29,7 @@
         </div>
 
         <img class="img" src="../img/Line.svg" alt="">
-        
+
         <h1 class="titulo">TURMAS DISPONIVEIS</h1>
         <div class="conteudo">
 
@@ -71,7 +75,7 @@
                 </div>
                 <div class="col-md-12">
                     <button id="terceiro_botao" type="">CRIAR USUÁRIO NA TURMA</button>
-                  </div>
+                </div>
             </div>
         </div>
 
